add the interface and try to do more design
adding interface IGetAll for the enc

--- a/getdelays.be/Views/Home/GetArrival.cshtml
+++ b/getdelays.be/Views/Home/GetArrival.cshtml
@@ -20,7 +20,7 @@
     <tr>
         <td>@a.station</td>
         <td>@a.tForView</td>
-        <td>@a.delay</td>
+        <td>@a.delay minutes</td>
         <td>@Html.ActionLink(a.vehicle, "GetTrain", "Home", routeValues: new { idTrain = a.vehicle }, htmlAttributes: null)</td>
     </tr>
     }
