--- a/getdelays.be/Views/Home/GetStationsByName.cshtml
+++ b/getdelays.be/Views/Home/GetStationsByName.cshtml
@@ -5,9 +5,26 @@
     DataApiPerStations s = ViewBag.station;
     DetailsPlace p = ViewBag.InfoStation;
 }
-
+<style>
+    #map {
+        height: 400px; 
+        width: 100%;
+    }
+</style>
 <h2>@s.stationinfo.name</h2>
 <p>Rating : @p.result.rating</p>
+<div id="map"></div>
+<script>
+function initMap() {
+  var location = {lat: @s.stationinfo.locationY, lng: @s.stationinfo.locationX};
+  var map = new google.maps.Map(
+      document.getElementById('map'), {zoom: 15, center: location});
+    var marker = new google.maps.Marker({ position: location, map: map });
+}
+</script>
+<script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAjpoXXWhFi4r1D5d5_1tF-bzeeFRpmfG0&callback=initMap">
+</script>
 <p>
     Address:
     @foreach (ComponentAddress a in p.result.address_components)
