--- a/getdelays.be/Views/Home/Index.cshtml
+++ b/getdelays.be/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 }
 
 <p>Getdelays.be helps people to see which trains or other(in the futur) are in delays</p>
-<br /><p>There is @ViewBag.CountStation stations in the system.</p>
+<br /><p>There are @ViewBag.CountStation stations in the system.</p>
 
