add the connections ptions and lot of debugs

--- a/getdelays.be/Content/Site.css
+++ b/getdelays.be/Content/Site.css
@@ -10,7 +10,6 @@
 }
 
 /* Set width on the form input elements since they're 100% wide by default */
-input,
 select,
 textarea {
     max-width: 280px;
@@ -45,4 +44,76 @@ textarea {
 }
 #Reviews > tbody > tr:nth-child(1), #Reviews > tbody > tr:nth-child(2), #Reviews > tbody > tr:nth-child(5), #Reviews > tbody > tr:nth-child(6), #Reviews > tbody > tr:nth-child(9), #Reviews > tbody > tr:nth-child(10) {
     background-color: lightgrey;
+}
+#stat {
+    width:100%;
+}
+#statFrom {
+    width: 100%;
+}
+#statTo {
+    width: 100%;
+}
+#search {
+    list-style-type: none;
+    width: 100%;
+    /*border: 1px solid #ddd;
+    margin-top: -1px; /* Prevent double borders */
+    /*background-color: #f6f6f6;
+    padding: 12px;
+    text-decoration: none;
+    color: black;*/
+}
+#searchFrom {
+    list-style-type: none;
+    width: 100%;
+    /*border: 1px solid #ddd;
+    margin-top: -1px; /* Prevent double borders */
+    /*background-color: #f6f6f6;
+    padding: 12px;
+    text-decoration: none;
+    color: black;*/
+}
+#searchTo {
+    list-style-type: none;
+    width: 100%;
+    /*border: 1px solid #ddd;
+    margin-top: -1px; /* Prevent double borders */
+    /*background-color: #f6f6f6;
+    padding: 12px;
+    text-decoration: none;
+    color: black;*/
+}
+.station {
+    list-style-type: none;
+    border: 1px solid #ddd;
+    margin-top: -1px; /* Prevent double borders */
+    background-color: #f6f6f6;
+    padding: 12px;
+    text-decoration: none;
+    color: black;
+}
+.stationTo {
+    list-style-type: none;
+    border: 1px solid #ddd;
+    margin-top: -1px; /* Prevent double borders */
+    background-color: #f6f6f6;
+    padding: 12px;
+    text-decoration: none;
+    color: black;
+}
+.stationFrom {
+    list-style-type: none;
+    border: 1px solid #ddd;
+    margin-top: -1px; /* Prevent double borders */
+    background-color: #f6f6f6;
+    padding: 12px;
+    text-decoration: none;
+    color: black;
+}
+.tableco {
+    width: 100%;
+}
+.tableco>tbody:nth-child(2n) {
+    background-color:lightgrey;
 }
