--- a/getdelays.be/Views/Station/GetDeparture.cshtml
+++ b/getdelays.be/Views/Station/GetDeparture.cshtml
@@ -1,27 +1,27 @@
 ﻿@using getdelays.be.Models;
 @{
-    ViewBag.Title = "See all Arrival";
+    ViewBag.Title = "See all Departure";
     DataApiPerStations s = ViewBag.station;
 }
 
 <h2>@s.stationinfo.name</h2>
-<p>Arrival:</p>
+<p>departure:</p>
 <table>
     <thead>
         <tr>
-            <td>Departure Station:</td>
+            <td>Arrival Station:</td>
             <td>ETA:</td>
-            <td>DElay:</td>
-            <td>train:</td>
+            <td>Delay:</td>
+            <td>Train:</td>
         </tr>
     </thead>
-    @foreach (ArrDep a in s.arrivals.arrival)
+    @foreach (ArrDep a in s.departures.departure)
     {
     <tr>
         <td>@a.station</td>
         <td>@a.tForView</td>
         <td>@a.delay minutes</td>
-        <td>@Html.ActionLink(a.vehicle, "GetTrain", "Home", routeValues: new { idTrain = a.vehicle }, htmlAttributes: null)</td>
+        <td>@Html.ActionLink(a.vehicle, "GetTrain", "Train", routeValues: new { idTrain = a.vehicle }, htmlAttributes: null)</td>
     </tr>
     }
 </table>
