--- a/getdelays.be/Views/Connection/SearchConnection.cshtml
+++ b/getdelays.be/Views/Connection/SearchConnection.cshtml
@@ -14,7 +14,7 @@
     </li>
     @foreach (Station s in stat)
     {
-        <li class="stationFrom" style="display:none" onclick="SelectStation('@s.name','from')">@s.name</li>
+        <li class="stationFrom" style="display:none" onclick="SelectStation('@s.name','from')"><a href="#">@s.name</a></li>
     }
 </ul>
 <ul>
@@ -23,7 +23,7 @@
     </li>
     @foreach (Station s in stat)
     {
-        <li class="stationTo" style="display:none" onclick="SelectStation('@s.name','to')">@s.name</li>
+        <li class="stationTo" style="display:none" onclick="SelectStation('@s.name','to')"><a href="#">@s.name</a></li>
     }
 </ul>
 <input type="submit" value="submit" />
