adding possibility to connect and create an account(view not yet)

--- a/getdelays.be/Views/Shared/_Layout.cshtml
+++ b/getdelays.be/Views/Shared/_Layout.cshtml
@@ -30,6 +30,17 @@
                     <li>
                         @Html.ActionLink("See Connection", "SearchConnection", "Connection")
                     </li>
+                    <li>
+                        @if (Session["user"] == null)
+                        {
+                            @Html.ActionLink("Connect you", "Index", "Login")
+
+                        }
+                        else
+                        {
+                            @Html.ActionLink("Profile", "Profil", "Login")
+                        }
+                    </li>
                 </ul>
             </div>
         </div>
