Make a profil and update database for adapt at what we need

--- a/getdelays.be/Views/Shared/_Layout.cshtml
+++ b/getdelays.be/Views/Shared/_Layout.cshtml
@@ -30,15 +30,21 @@
                     <li>
                         @Html.ActionLink("See Connection", "SearchConnection", "Connection")
                     </li>
-                    <li>
                         @if (Session["user"] == null)
                         {
-                            @Html.ActionLink("Connect you", "Index", "Login")
-
+                            <li>
+                                @Html.ActionLink("Connect you", "Index", "Login")
+                            </li>
                         }
                         else
                         {
-                            @Html.ActionLink("Profile", "Profil", "Login")
+                            <li>
+                                @Html.ActionLink("Profile", "Index","Profil")
+
+                            </li>
+                            <li>
+                                @Html.ActionLink("Disconnect", "Disconnect", "Login")
+                            </li>
                         }
                     </li>
                 </ul>
