--- a/getdelays.be/Views/Login/Index.cshtml
+++ b/getdelays.be/Views/Login/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@using getdelays.be.Models;
+﻿@using getdelays.be.Models.POCO;
 @{
     ViewBag.Title = "Login";
     string error = ViewBag.error;
@@ -6,11 +6,11 @@
 
 <h2>Login</h2>
 <p>@error</p>
-@using (Html.BeginForm("Login","Login",FormMethod.Get))
+@using (Html.BeginForm("Login","Login",FormMethod.Post))
 {
 <p>
-    Email:<input type="text" id="email" name="email" onkeydown="ListStationFrom()" />
-    Password:<input type="password" id="password" name="password" onkeydown="ListStationTo()" />
+    Email:<input type="text" id="email" name="email" />
+    Password:<input type="password" id="password" name="password" />
     <input type="submit" value="submit" />
     @Html.ActionLink("Not yet an account? Create one", "CreateAccount", "Login")
 </p>
