Adding the possibilities to delete the profile

--- a/getdelays.be/Views/Profil/Index.cshtml
+++ b/getdelays.be/Views/Profil/Index.cshtml
@@ -8,6 +8,7 @@
 <p>Name: @u.name</p>
 <p>Firstname: @u.surname</p>
 <p>Email: @u.email</p>
+<p>Phone Number: @u.phoneNumber</p>
 @if (u.followedStations.Count >= 1)
 {
     <p>Followed Stations: </p>
