Adding nav button and canging the models to light up the controllers

--- a/getdelays.be/Views/Shared/_Layout.cshtml
+++ b/getdelays.be/Views/Shared/_Layout.cshtml
@@ -54,6 +54,7 @@
 
     <div class="container body-content">
         @RenderBody()
+        <br /><a href='javascript:history.go(-1)'>Go Back to Previous Page</a>
         <hr />
         <footer>
             <p>&copy; @DateTime.Now.Year Nathan Pire- GetDelays</p>
