--- a/getdelays.be/Views/Station/GetStationsByName.cshtml
+++ b/getdelays.be/Views/Station/GetStationsByName.cshtml
@@ -113,7 +113,7 @@ function initMap() {
                 <td>@s.arrivals.arrival[i].station</td>
                 <td>@s.arrivals.arrival[i].tForView</td>
                 <td>@s.arrivals.arrival[i].delay minutes</td>
-                <td>@Html.ActionLink(s.arrivals.arrival[i].vehicle, "GetTrain", "Train", routeValues: new { idTrain = s.arrivals.arrival[i].vehicle }, htmlAttributes: null)</td>
+                <td>@Html.ActionLink(s.arrivals.arrival[i].vehicle, "GetTrainFromStation", "Train", routeValues: new { idTrain = s.arrivals.arrival[i].vehicle, StationName = s.stationinfo.name }, htmlAttributes: null)</td>
             </tr>
         }
         else
@@ -122,7 +122,7 @@ function initMap() {
                 <td>@s.arrivals.arrival[i].station</td>
                 <td>@s.arrivals.arrival[i].tForView</td>
                 <td>@s.arrivals.arrival[i].delay minutes</td>
-                <td>@Html.ActionLink(s.arrivals.arrival[i].vehicle, "GetTrain", "Train", routeValues: new { idTrain = s.arrivals.arrival[i].vehicle }, htmlAttributes: null)</td>
+                <td>@Html.ActionLink(s.arrivals.arrival[i].vehicle, "GetTrainFromStation", "Train", routeValues: new { idTrain = s.arrivals.arrival[i].vehicle,StationName=s.stationinfo.name }, htmlAttributes: null)</td>
             </tr>
 
         }
