-Protect the research for connections and stations -Accent and case don't count now for the research

--- a/getdelays.be/Views/Shared/_Layout.cshtml
+++ b/getdelays.be/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     <script src="~/Scripts/Visiility.js"></script>
     <script src="~/Scripts/ListStation.js"></script>
     <script src="~/Scripts/ListConnection.js"></script>
+    <script src="~/Scripts/latinise.js"></script>
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
