--- a/getdelays.be/Views/User/Index.cshtml
+++ b/getdelays.be/Views/User/Index.cshtml
@@ -55,6 +55,6 @@
 <br />
 <br />
 <br />
-<p>@Html.ActionLink("Edit Your Information", "MakeChangeInformation", "profil")</p>
-<p>@Html.ActionLink("Delete Your Profile", "DeleteUser", "Profil")</p>
+<p>@Html.ActionLink("Edit Your Information", "MakeChangeInformation", "User")</p>
+<p>@Html.ActionLink("Delete Your Profile", "DeleteUser", "User")</p>
 
