--- a/getdelays.be/Views/User/Login.cshtml
+++ b/getdelays.be/Views/User/Login.cshtml
@@ -6,13 +6,13 @@
 
 <h2>Login</h2>
 <p>@error</p><br />
-@using (Html.BeginForm("Login","Login",FormMethod.Post))
+@using (Html.BeginForm("Login","User",FormMethod.Post))
 {
 <p>
     Email:<input type="text" id="email" name="email" /><br />
     Password:<input type="password" id="password" name="password" /><br />
     <input type="submit" value="submit" /><br />
-    @Html.ActionLink("Not yet an account? Create one", "CreateAccount", "Login")
+    @Html.ActionLink("Not yet an account? Create one", "CreateAccount", "User")
 </p>
 }
 
